--- a/src/api/src/main/webapp/style.css
+++ b/src/api/src/main/webapp/style.css
@@ -8,7 +8,7 @@ header{
     font-weight: bold;
 }
 
-main{
+.login{
     margin-top: 10%;
     margin-left: 32%;
     margin-right: 32%;
@@ -18,6 +18,18 @@ main{
     border-radius: 20px;
     border: 2px solid black;
 }
+
+.sigin{
+    margin-top: 10%;
+    margin-left: 32%;
+    margin-right: 32%;
+    height: 1050px;
+    width: 500px;
+    background-color: #FDFF8C;
+    border-radius: 20px;
+    border: 2px solid black;
+}
+
 
 .txtIS{
     margin-top: 5%;
